spacing fix

--- a/themes/webcomic/assets/scss/main.scss
+++ b/themes/webcomic/assets/scss/main.scss
@@ -47,7 +47,6 @@ body {
   grid-template-rows: 1fr auto;
 	font-size: 1rem;
 	padding-bottom: 100px;
-	padding-bottom: env(safe-area-inset-bottom);;
 	@media (min-width: $bp_sm) {
 		padding-bottom: 87px;
 	}
